affichage score + arrêter la boucle avec affichage du score et quiz terminé + création de la fonction redémarrer le quiz + ajout de fonction question et réponses pour les distinguer de l'un et de l'autre

--- a/package.json
+++ b/package.json
@@ -17,5 +17,6 @@
   "bugs": {
     "url": "https://github.com/giovanafarinha/quiz/issues"
   },
-  "homepage": "https://github.com/giovanafarinha/quiz#readme"
+  "homepage": "https://github.com/giovanafarinha/quiz#readme",
+  "type": "module"
 }
